--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A CRUD REST API",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "npx mocha",
     "dev": "nodemon app.js"
   },
   "author": "Ani Joseph",
